# ozon-counterfeit-detection

./: .gitignore  README.md  config.py  main.ipynb  main.py  pyproject.toml  requirements.txt
api/v1/: router.py
api/v1/endpoints/: batch_prediction.py  health.py  prediction.py
core/: config.py  logging.py
ml_model/: catboost_model.cbm
ml_models/: catboost_model.cbm
models/: prediction.py  response.py  url_input.py
services/: model_loader.py  prediction_service.py
src/: data_loader.py  features.py  model.py  multimodal.py  preprocessing.py  utils.py
static/: index.html
tests/: prediction_test.py
training/: train.py
traning/: train.py
utils/: data_utils.py  feature_extractor.py  features.py  model.py  multimodal.py  preprocessing.py  test_data_saver.py
