[project]
name = "kachectvo-zadachi-7054"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.0",
    "beautifulsoup4==4.12.3",
    "catboost==1.2.5",
    "fastapi==0.110.0",
    "huggingface-hub==0.22.0",
    "img2vec-pytorch==1.0.2",
    "joblib==1.3.2",
    "jupyter==1.0.0",
    "lxml==5.1.0",
    "matplotlib==3.8.3",
    "notebook==7.1.0",
    "numpy==1.26.4",
    "openai==1.6.1",
    "pandas==2.2.1",
    "pillow==10.2.0",
    "playwright==1.40.0",
    "pydantic==2.6.0",
    "scikit-learn==1.5.2",
    "scipy==1.13.0",
    "seaborn==0.13.2",
    "sentence-transformers==2.7.0",
    "setuptools>=65.0.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "tqdm>=4.67.3",
    "transformers==4.39.0",
    "uvicorn==0.27.0",
    "wheel>=0.46.3",
    "ydata-profiling==4.18.1",
]
